# timeline

./: .gitignore  .ocamlformat  LICENSE  Makefile  dune-project  timeline.opam
example/: dune  main.ml
src/: continuous.ml  discrete.ml  dune
