opam-version: "2.0"
name: "timeline"
version: "0.1"
synopsis: ""
description: """"""
maintainer: "danisfast"
authors: "danisfast"
license: "MIT"
homepage: ""
bug-reports: ""
dev-repo: ""
depends: [ "ocaml" "ocamlfind" "dune" "dune-configurator" ]
build: [
    ["dune" "build" "-p" name "-j" jobs]
]
install: []
